[package]
name = "test_dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
spider_client = { git = "https://github.com/Ocelmot/spider" }
serde_json = "1.0.73"
